# games101-homework

./: .gitattributes  .gitignore  CMakeLists.txt
src/CMake/: 3rdparties.cmake  config.cmake  main.cmake
src/homework0/: CMakeLists.txt
src/homework0/include/: eigenexample.h  homework0.h
src/homework0/src/: eigenexample.cpp  homework0.cpp  main.cpp
src/homework1/: CMakeLists.txt
src/homework1/include/: Triangle.hpp  rasterizer.hpp
src/homework1/src/: main.cpp  rasterizer.cpp
src/homework2/: CMakeLists.txt
src/homework2/include/: rasterizer.hpp
src/homework2/src/: main.cpp  rasterizer.cpp
src/homework3/: CMakeLists.txt
src/homework3/src/: main.cpp  rasterizer.cpp
